# ai-travel-assistant

./: .gitignore  README.md  main.py  pyproject.toml
.ruler/: ruler.toml
.ruler/documentation/: amadeus_service.md
.ruler/tests/: test_documentation.md
src/: app.py
src/agents/: hotel_agent.py
src/config/: settings.py
src/notebooks/: hotel_agent.ipynb
src/services/: amadeus_service.py  hotel_service.py
src/test/: test_amadeus_api.py  test_amadeus_async.py  test_amadeus_checkin.py  test_amadeus_direct.py  test_amadeus_service.py  test_env_vars.py
src/utils/: logger.py
